ticketing/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template: # template section describes exactly how every pod that is created and managed by this deployment should behave.
    metadata:
      labels:
        app: auth
    spec: # describe how every pod should behave.
      containers:
        - name: auth
          image: tlhsieh0610/auth
--- #to allow requests inside the cluster to get access to this pod.
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
