ticketing/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template: # template section describes exactly how every pod that is created and managed by this deployment should behave.
    metadata:
      labels:
        app: client
    spec: # describe how every pod should behave.
      containers:
        - name: client
          image: tlhsieh0610/client
--- #to allow requests inside the cluster to get access to this pod.
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
