ticketing/infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template: # template section describes exactly how every pod that is created and managed by this deployment should behave.
    metadata:
      labels:
        app: tickets
    spec: # describe how every pod should behave.
      containers:
        - name: tickets
          image: tlhsieh0610/tickets
--- #to allow requests inside the cluster to get access to this pod.
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
